# zip_viewer

./: CMakeLists.txt  README.md  main.cpp  treeitem.cpp  treeitem.hpp  treemodel.cpp  treemodel.hpp
dbg/: CMakeCache.txt  cmake_install.cmake  install_manifest.txt  zip_viewer
dbg/lib/pkgconfig/: minizip.pc
dbg/minizip-ng/: cmake_install.cmake  minizip-config-version.cmake  minizip-config.cmake.in
dbg/minizip-ng/minizip_autogen/: moc_predefs.h
dbg/zip_viewer_autogen/: mocs_compilation.cpp
